--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <div class="m-4">
         <form method="post" autocomplete="off" name="enquiry-sheet" onsubmit=reset onsubmit="return validation()">
-            <p class="mt-4"><strong>Note:</strong> We' ll never share your details with anyone else..</p>
+            <p class="mt-4"><strong>Note:</strong> We' ll never share your details with anyone else.</p>
             <div class="mb-3">
                 <label for="name" class="form-label"></label>
                 <input type="text" name="Enter Your Full Name" class="form-control" placeholder="Enter Your Name" required>
